apps/pgweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
  namespace: app
spec:
  selector:
    app: pgweb
  ports:
    - port: 80
      targetPort: 8081
