apps/pgweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: pgweb.akatukii.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgweb
                port:
                  number: 80
